Mon Apr 24 00:21:36 2000  Jeffrey A Law  (law@cygnus.com)

	* genattrtab.c (find_attr): Initialize unsigned_p, func_units_p
	and blockage_p in the newly allocated attribute.

Sun Apr 23 20:16:49 2000  Alexandre Oliva  <aoliva@cygnus.com>

	* config/mn10300/mn10300.md (addsi): `inc4' on address
	registers does not modify cc, but `inc' on an extended
	register does.

Sun Apr 23 16:24:35 2000  Denis Chertykov  <denisc@overta.ru>

	* reload.c (find_equiv_reg): Checks all valueno regs
	as a reload_reg_p regs.

2000-04-23  Zack Weinberg  <zack@wolery.cumb.org>

	* cpphash.c (collect_objlike_expansion): Add sanity check.
	(special_symbol): Remove case T_CONST, T_XCONST, T_MCONST.  If
	the buffer is the empty string, return.  Mark __DATE__ and
	__TIME__ as XCONST nodes, not MCONST.
	(_cpp_macroexpand): Avoid pushing an empty buffer.
	(funlike_macroexpand): Don't pop token_buffer here.

Sun Apr 23 18:37:53 2000  Alexandre Oliva  <aoliva@cygnus.com>

	* config/mn10300/mn10300.h (REGNO_IN_RANGE_P): New macro.
	(REGNO_DATA_P, REGNO_ADDRESS_P, REGNO_SP_P): New macros.
	(REGNO_EXTENDED_P, REGNO_AM33_P): New macros.
	(REGNO_OK_FOR_BASE_P): Define in terms of them.
	(REGNO_OK_FOR_BIT_BASE_P, REGNO_OK_FOR_INDEX_P): Likewise.
	(REG_OK_FOR_BASE_P): Define in terms of the REGNO macro.
	(REG_OK_FOR_BIT_BASE_P, REG_OK_FOR_INDEX_P): Likewise.

Sun Apr 23 22:23:08 MET DST 2000  Jan Hubicka  <jh@suse.cz>

	* loop.c (simplify_giv_expr):  Be more agressive on simplifying
	constant MULT givs.

2000-04-23  Zack Weinberg  <zack@wolery.cumb.org>

	* cpphash.h (struct definition): Move file, line, col members...
	(struct hashnode): ... here.  Also add 'disabled' flag.
	(enum node_type): Add T_VOID, T_XCONST, T_FMACRO, and
	T_IDENTITY.  Remove T_DISABLED.		      
	Update prototypes.

	* cpphash.c (_cpp_dump_definition): Split out dump_DEFINITION.     
	(collect_expansion): Split into collect_objlike_expansion and
	collect_funlike_expansion.				   