@@ -1,3 +1,12 @@
+2000-04-24  Mark Mitchell  <mark@codesourcery.com>
+
+	* regs.h (reg_n_max): Don't declare.
+	* flow.c (reg_n_max): Don't define.
+	* regclass.c (renumber): Don't initialize to zero.
+	(regno_allocated): Likewise.
+	(reg_n_max): Define.
+	(allocate_reg_info): Don't initialize unnecessarily.
+	
 Mon Apr 24 00:21:36 2000  Jeffrey A Law  (law@cygnus.com)
 
 	* genattrtab.c (find_attr): Initialize unsigned_p, func_units_p
